fixup! fix: correct bottom margins on ios devices

--- a/app/components/Toolbar.module.css
+++ b/app/components/Toolbar.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row-reverse;
   /* height of this container is double the padding + large button size */
-  margin-top: calc(-1 * (var(--gutter) * 4 + 6rem));
+  margin-top: calc(-1 * (var(--gutter) * 4 + 3.5rem));
   align-items: end;
 }
 
